--- a/back/package.json
+++ b/back/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "dev": "node backend.js"
+    "dev": "node test.js"
   },
   "keywords": [],
   "author": "",
