--- a/back/package.json
+++ b/back/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
+    "natural": "^6.3.0",
     "nodemon": "^2.0.22",
     "openai": "^3.2.1"
   }
