--- a/back/package.json
+++ b/back/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "dev": "node botConfig.js"
+    "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +15,9 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
+    "mongodb": "^5.5.0",
+    "mongoose": "^7.1.1",
+    "natural": "^6.3.0",
     "nodemon": "^2.0.22",
     "openai": "^3.2.1"
   }
