--- a/client/package.json
+++ b/client/package.json
@@ -1,19 +1,21 @@
 {
   "name": "client",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "dev": "nodemon index.js"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "jsdom": "^22.0.0",
+    "openai": "^3.2.1"
   },
   "devDependencies": {
-    "vite": "^4.3.2"
-  },
-  "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2"
+    "nodemon": "^2.0.22"
   }
 }
